--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,13 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.8",
         "symfony/console": "^6.1",
+        "symfony/doctrine-messenger": "^6.1",
         "symfony/dotenv": "^6.1",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "^6.1",
         "symfony/http-client": "^6.1",
+        "symfony/messenger": "^6.1",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/property-access": "^6.1",
         "symfony/property-info": "^6.1",
         "symfony/proxy-manager-bridge": "^6.1",
