--- a/.env
+++ b/.env
@@ -33,5 +33,5 @@ DATABASE_URL="postgresql://yousign:123456789@database:5432/gh-archive-keyword?se
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
-MESSENGER_FAILED_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_FAILED_TRANSPORT_DSN=doctrine://default?auto_setup=0&queue_name=failed
 ###< symfony/messenger ###
